# herd3

./: .gitignore  Main.hs  README.md  cabal.config  herd3.cabal
app/assets/styles/: herd3.scss
app/assets/styles/app/static/: css
app/models/: sampledata.hs
app/static/js/: herd3.js
app/views/: index.hs
herd3/assets/js/: herd3.js
herd3/models/: sampledata.hs
herd3/views/: index.hs
